2004-02-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Lexmark-X125.xml: Added the Lexmark X125 multi-function
	  device.

	* driver/drv_x125.xml, opt/drv_x125-PageSize.xml,
	  opt/drv_x125-Resolution.xml, opt/drv_x125-ColorMode.xml,
	  opt/drv_x125-Bidirectional.xml, drv_x125-Device.xml: Added
	  "drv_x125" driver for the Lexmark X125 (Thanks to Mark Roth,
	  markroth8 at yahoo dot com).

2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Samsung-ML-1510.xml, printer/Samsung-ML-1710.xml,
	  printer/Samsung-ML-1410.xml, printer/Samsung-ML-1440.xml,
	  printer/Samsung-ML-1450PS.xml, printer/Samsung-ML-1750.xml,
	  printer/Samsung-ML-1450.xml, printer/Samsung-ML-2150.xml,
	  printer/Samsung-ML-2151N.xml, printer/Samsung-ML-2152W.xml,
	  printer/Samsung-ML-2150PS.xml, printer/Samsung-ML-2151NPS.xml,
	  printer/Samsung-ML-2152WPS.xml, printer/Samsung-ML-2550.xml,
	  printer/Samsung-ML-2551N.xml, printer/Samsung-ML-2552W.xml,
	  printer/Samsung-ML-7300.xml, printer/Samsung-ML-7300N.xml,
	  printer/Samsung-ML-1430.xml, printer/Samsung-CLP-500.xml,
	  driver/gdi.xml, driver/ljet4.xml, driver/ljet4d.xml,
	  driver/pxlmono.xml, driver/Postscript.xml,
	  opt/pxlmono-PrintoutMode.xml, opt/160.xml,
	  opt/pxlmono-PrinterResolution.xml: Added new Samsung laser
	  printers.

2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/ppmtomd.xml, opt/ppmtomd-MediaType.xml,
	  opt/ppmtomd-ColorMode.xml, ppmtomd-ColourCorrection.xml: Updated
	  Foomatic data of "ppmtomd" driver to support version 1.1 of the
	  driver.

2004-01-16 Hin-Tak Leung <htl10@users.sourceforge.net>
	* opt/epsonepl-FlowControl.xml: Correcting illegal and off-PPD-spec 
	  characters in short-names.
	
2004-01-15 Hin-Tak Leung <htl10@users.sourceforge.net>
	* driver/epl5700l.xml, driver/epl5800l.xml,
	  driver/epl5900l.xml, driver/epl6100l.xml,
	  driver/epl6200l.xml,
	  opt/epsonepl-Density.xml, opt/epsonepl-Dpi.xml,
	  opt/epsonepl-FlowControl.xml, opt/epsonepl-PageSize.xml,