@@ -350,6 +350,9 @@
    <id>printer/HP-LaserJet_4100</id>
   </printer>
   <printer>
+   <id>printer/HP-Color_LaserJet_5M</id>
+  </printer>
+  <printer>
    <id>printer/HP-Color_LaserJet_2500</id>
   </printer>
   <printer>
