@@ -16,6 +16,9 @@
    <id>printer/HP-Color_LaserJet_5</id><!-- HP Color LaserJet 5 -->
   </printer>
   <printer>
+   <id>printer/HP-Color_LaserJet_5M</id>
+  </printer>
+  <printer>
    <id>printer/HP-Color_LaserJet_5000</id><!-- HP Color LaserJet 5000 -->
    <comments>
     <en>Not tested, probably works.</en>
