@@ -121,6 +121,12 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>Color LaserJet 5M</model>
+      <driver>Postscript</driver>
+      <arg_defval>ev/Postscript-300</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>LaserJet 3P w/PS</model>
       <driver>Postscript</driver>
       <arg_defval>ev/Postscript-300</arg_defval>
@@ -316,6 +322,11 @@
      <constraint sense="false">
       <make>NEC</make>
       <model>SilentWriter LC 890</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 5M</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
@@ -811,6 +822,11 @@
      <constraint sense="false">
       <make>HP</make>
       <model>DesignJet 5500ps</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>HP</make>
+      <model>Color LaserJet 5M</model>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
