@@ -1,0 +1,28 @@
+<printer id="printer/HP-Color_LaserJet_5M">
+  <make>HP</make>
+  <model>Color LaserJet 5M</model>
+  <mechanism>
+    <laser/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>300</x>
+        <y>300</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism><!--no "url"-->
+  <lang>
+    <postscript />
+    <pcl/>
+    <pjl/>
+  <!--No "text"?--></lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  <driver>Postscript</driver><!--verified--><!--no "contrib_url"-->
+  <comments>
+    <en></en>
+  </comments>
+</printer>
