@@ -1,3 +1,9 @@
+2004-02-29  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-Color_LaserJet_5M, driver/Postscript.xml,
+	  driver/cljet5.xml, driver/cljet5c.xml,
+	  opt/Postscript-Resolution.xml: Added the HP Color LaserJet 5M.
+
 2004-02-27  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Lexmark-X125.xml: Added the Lexmark X125 multi-function
